# pants-multiproject-mwe

./: BUILD  README.md  common-requirements.txt  pants.toml
apple-pie-api/: BUILD  Pipfile  README.md  pyproject.toml  requirements.txt
apple-pie-api/src/: __init__.py  main.py
apple-pie-api/src/numerics/: __init__.py  pi.py
apple-pie-api/tests/unit/numerics/: test_pi.py
build-support/: build.sh
helloworld/: BUILD
randmoji-api/: .env  BUILD  README.md  requirements.txt
randmoji-api/src/: main.py
randmoji-api/src/emoji_utils/: __init__.py
